--- a/.github/workflows/main_flaskapprajeevranjan.yml
+++ b/.github/workflows/main_flaskapprajeevranjan.yml
@@ -61,3 +61,6 @@ jobs:
           app-name: 'flaskapprajeevranjan'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_B77BF42C0EDB417CA99243AD7AFE67AC }}
+
+      - name: starting web app
+        run: python main.py
