--- a/.github/workflows/main_flaskapprajeevranjan.yml
+++ b/.github/workflows/main_flaskapprajeevranjan.yml
@@ -62,5 +62,8 @@ jobs:
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_B77BF42C0EDB417CA99243AD7AFE67AC }}
 
+      - name: Install dependencies
+        run: pip install -r requirements.txt
+        
       - name: starting web app
         run: python app.py
